--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "unido-partnership-crm",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sebastianschrottenbach.github.io/unido-partnership-crm",
+  "homepage": "./",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "d3": "^7.8.5",
+    "d3-force": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-force-graph": "^1.47.4",
     "react-router": "^7.3.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
@@ -43,10 +46,13 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "babel-jest": "^29.7.0",
     "customize-cra": "^1.0.0",
     "gh-pages": "^6.3.0",
     "react-app-rewired": "^2.2.1",
